samples/_failures_safe/1761221352_02c259_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a2d13d4.c: In function ‘main’:
./samples/SAFE/__tmp_5a2d13d4.c:136:5: error: expected declaration or statement at end of input
  136 |     for (int i = 0; i < 3; i++) {
      |     ^~~
./samples/SAFE/__tmp_5a2d13d4.c:136:5: error: expected declaration or statement at end of input
